--- a/Lab10_MVC/Lab10_MVC.csproj
+++ b/Lab10_MVC/Lab10_MVC.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\wine.csv" />
+  </ItemGroup>
+
 </Project>
